[workspace]

members = [
	"dynatos",
	"dynatos-builder",
	"dynatos-builder-macros",
	"dynatos-context",
	"dynatos-egui",
	"dynatos-html",
	"dynatos-html-macros",
	"dynatos-html-parser",
	"dynatos-loadable",
	"dynatos-macros",
	"dynatos-reactive",
	"dynatos-router",
	"dynatos-title",
	"dynatos-util",
	"dynatos-world",
]
resolver = "2"

[workspace.dependencies]

# Workspace members
dynatos                = { path = "dynatos" }
dynatos-builder        = { path = "dynatos-builder" }
dynatos-builder-macros = { path = "dynatos-builder-macros" }
dynatos-context        = { path = "dynatos-context" }
dynatos-egui           = { path = "dynatos-egui" }
dynatos-html           = { path = "dynatos-html" }
dynatos-html-macros    = { path = "dynatos-html-macros" }
dynatos-html-parser    = { path = "dynatos-html-parser" }
dynatos-loadable       = { path = "dynatos-loadable" }
dynatos-macros         = { path = "dynatos-macros" }
dynatos-reactive       = { path = "dynatos-reactive" }
dynatos-router         = { path = "dynatos-router" }
dynatos-title          = { path = "dynatos-title" }
dynatos-util           = { path = "dynatos-util" }
dynatos-world          = { path = "dynatos-world" }

# zutil
zutil-cloned = { git = "https://github.com/Zenithsiz/zutil", rev = "978fa5df733d59fc691812ce2fa6072bf901dc7f" }

anyhow               = "1.0.98"
convert_case         = "0.8.0"
derive_more          = "2.0.1"
derive_utils         = "0.15.0"
duplicate            = "2.0.0"
egui                 = "0.31.0"
extend               = "1.2.0"
futures              = "0.3.31"
itertools            = "0.14.0"
js-sys               = "0.3.77"
parking_lot          = "0.12.3"
pin-project          = "1.1.10"
priority-queue       = "2.3.1"
proc-macro2          = "1.0.94"
quote                = "1.0.40"
scopeguard           = "1.2.0"
syn                  = "2.0.100"
thiserror            = "2.0.12"
tokio                = "1.44.2"
tracing              = "0.1.41"
tracing-subscriber   = "0.3.19"
tracing-web          = "0.1.3"
unicode-xid          = "0.2.6"
url                  = "2.5.4"
wasm-bindgen         = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys              = "0.3.77"

[workspace.lints]

clippy.nursery  = { level = "warn", priority = -1 }
clippy.pedantic = { level = "warn", priority = -1 }

# Styling
clippy.match_bool         = "allow"
clippy.option_if_let_else = "allow"
clippy.single_match_else  = "allow"

# It's easier to define them before their first usage
# TODO: Can we instead get an error for when using items before their definition?
clippy.items_after_statements = "allow"

# We don't want to enforce `Send` futures
clippy.future_not_send = "allow"

# Most times, the panics are internal assertions that the user can't trigger
clippy.missing_panics_doc = "allow"

# TODO: Should we document all errors?
clippy.missing_errors_doc = "allow"

# Until `wasm_bindgen` themselves fix it upstream, we can't fix ourselves
rust.wasm_c_abi = "allow"
