[workspace]

members = [
	"dynatos-builder",
	"dynatos-builder-macros",
	"dynatos-inheritance",
	"dynatos-inheritance-macros",
	"dynatos-loadable",
	"dynatos-reactive",
	"dynatos-sync-types",
	"dynatos-util",
	"dynatos-web",
	"dynatos-web-macros",
	"dynatos-web-parser",
	"dynatos-web-reactive",
	"dynatos-web-reactive-macros",
	"dynatos-web-router",
	"dynatos-web-title",

	# Examples
	"examples/counter",
	"examples/counter-no-macros",
	"examples/dyn-children",
	"examples/dyn-element",
	"examples/import-html",
	"examples/query",
	"examples/router",

	# Tests
	"tests/dynatos-reactive-sync",
]
resolver = "2"

[workspace.dependencies]

# Workspace members
dynatos-builder             = { path = "dynatos-builder" }
dynatos-builder-macros      = { path = "dynatos-builder-macros" }
dynatos-inheritance         = { path = "dynatos-inheritance" }
dynatos-inheritance-macros  = { path = "dynatos-inheritance-macros" }
dynatos-loadable            = { path = "dynatos-loadable" }
dynatos-reactive            = { path = "dynatos-reactive" }
dynatos-sync-types          = { path = "dynatos-sync-types" }
dynatos-util                = { path = "dynatos-util" }
dynatos-web                 = { path = "dynatos-web" }
dynatos-web-macros          = { path = "dynatos-web-macros" }
dynatos-web-parser          = { path = "dynatos-web-parser" }
dynatos-web-reactive        = { path = "dynatos-web-reactive" }
dynatos-web-reactive-macros = { path = "dynatos-web-reactive-macros" }
dynatos-web-router          = { path = "dynatos-web-router" }
dynatos-web-title           = { path = "dynatos-web-title" }

anyhow                   = "1.0.102"
app-error                = "0.1.0"
console_error_panic_hook = "0.1.7"
convert_case             = "0.11.0"
derive_more              = "2.1.1"
derive_utils             = "0.15.1"
duplicate                = "2.0.1"
extend                   = "1.2.0"
futures                  = "0.3.32"
itertools                = "0.14.0"
js-sys                   = "0.3.91"
petgraph                 = "0.8.3"
pin-project              = "1.1.11"
proc-macro2              = "1.0.106"
quote                    = "1.0.45"
scopeguard               = "1.2.0"
strum                    = "0.28.0"
syn                      = "2.0.117"
thiserror                = "2.0.18"
tracing                  = "0.1.44"
tracing-subscriber       = "0.3.22"
tracing-web              = "0.1.3"
trybuild                 = "1.0.116"
unicode-xid              = "0.2.6"
url                      = "2.5.8"
wasm-bindgen             = "0.2.114"
wasm-bindgen-futures     = "0.4.64"
web-sys                  = "0.3.91"
zutil-cloned             = "0.1.0"

[workspace.lints]

clippy.nursery     = { level = "warn", priority = -1 }
clippy.pedantic    = { level = "warn", priority = -1 }
clippy.restriction = { level = "warn", priority = -1 }

rust.unused_crate_dependencies = "warn"

# We enable restriction group and then allow any we don't care
clippy.blanket_clippy_restriction_lints = "allow"

# Styling
clippy.doc_paragraphs_missing_punctuation = "allow"
clippy.implicit_return                    = "allow"
clippy.match_bool                         = "allow"
clippy.option_if_let_else                 = "allow"
clippy.ref_patterns                       = "allow"
clippy.semicolon_inside_block             = "allow"
clippy.semicolon_outside_block            = "allow"
clippy.single_match_else                  = "allow"

# It's easier to define them before their first usage
# TODO: Can we instead get an error for when using items before their definition?
clippy.items_after_statements = "allow"

# We don't want to enforce `Send` futures
clippy.future_not_send = "allow"

# Most times, the panics are internal assertions that the user can't trigger
clippy.missing_panics_doc = "allow"
clippy.unwrap_in_result   = "allow"

# Shadowing is fine
# TODO: Turn off `unrelated` every once in a while?
clippy.shadow_reuse     = "allow"
clippy.shadow_same      = "allow"
clippy.shadow_unrelated = "allow"

# We want to use match ergonomics
clippy.pattern_type_mismatch = "allow"

# We sometimes need to explicitly panic
clippy.panic       = "allow"
clippy.unreachable = "allow"

# We create these `Error` types inside of submodules,
# intending to be used as `module::Error`
clippy.error_impl_error = "allow"

# We don't want to clutter the examples, and this is very noisy there
clippy.default_numeric_fallback = "allow"

# Even if currently no errors exist, we might add them in the future
clippy.unnecessary_wraps = "allow"

# Misc.
clippy.arbitrary_source_item_ordering    = "allow"
clippy.arithmetic_side_effects           = "allow"
clippy.exhaustive_enums                  = "allow"
clippy.exhaustive_structs                = "allow"
clippy.expect_used                       = "allow"
clippy.field_scoped_visibility_modifiers = "allow"
clippy.impl_trait_in_params              = "allow"
clippy.indexing_slicing                  = "allow"
clippy.match_wild_err_arm                = "allow"
clippy.mem_forget                        = "allow"
clippy.min_ident_chars                   = "allow"
clippy.missing_docs_in_private_items     = "allow"
clippy.module_name_repetitions           = "allow"
clippy.pub_use                           = "allow"
clippy.pub_with_shorthand                = "allow"
clippy.question_mark_used                = "allow"
clippy.self_named_module_files           = "allow"
clippy.separated_literal_suffix          = "allow"
clippy.similar_names                     = "allow"
clippy.single_call_fn                    = "allow"
clippy.single_char_lifetime_names        = "allow"
clippy.string_slice                      = "allow"
clippy.struct_excessive_bools            = "allow"
clippy.struct_field_names                = "allow"
clippy.unused_trait_names                = "allow"
clippy.wildcard_enum_match_arm           = "allow"

# False positives for tests in `tests/`.
clippy.tests_outside_test_module = "allow"

# TODO: Should we document all errors?
clippy.missing_errors_doc = "allow"

# TODO: Should we mark all of them as inline
clippy.missing_inline_in_public_items = "allow"

# TODO: Should we turn this off every once a while to check if we're missing any
#       default items we can implement better?
clippy.missing_trait_methods = "allow"

# TODO: Should we move to `alloc`?
clippy.std_instead_of_alloc = "allow"

# TODO: This has too many false positives, but it can be useful, check manually occasionally
clippy.significant_drop_tightening = "allow"
