[package]
name    = "dynatos-html-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]

dynatos-html-parser = { workspace = true }

itertools   = { workspace = true }
proc-macro2 = { workspace = true }
quote       = { workspace = true }
syn         = { workspace = true }

[lints]
workspace = true
