[package]
name    = "dynatos-html-router"
version = "0.1.0"
edition = "2024"

[dependencies]

dynatos-context  = { workspace = true }
dynatos-html     = { workspace = true }
dynatos-loadable = { workspace = true }
dynatos-reactive = { workspace = true }
dynatos-util     = { workspace = true }

zutil-cloned = { workspace = true }

duplicate    = { workspace = true }
extend       = { workspace = true }
js-sys       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
url          = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys      = { features = ["History", "Location"], workspace = true }

[lints]
workspace = true
