[package]
name = "dynatos-html"
version = "0.1.0"
edition = "2021"

[dependencies]

duplicate = { workspace = true }
extend = { workspace = true }
itertools = { workspace = true }
js-sys = { workspace = true }
tracing = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = ["HtmlInputElement"] }
