[package]
name = "dynatos-html"
version = "0.1.0"
edition = "2021"

[dependencies]

dynatos-html-macros = { workspace = true }
dynatos-util = { workspace = true }

anyhow = { workspace = true }
duplicate = { workspace = true }
extend = { workspace = true }
itertools = { workspace = true }
js-sys = { workspace = true }
tracing = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = [
	"Comment",
	"Document",
	"Element",
	"HtmlElement",
	"HtmlInputElement",
	"InputEvent",
	"PointerEvent",
	"PopStateEvent",
	"Text",
	"Window",
] }

[lints]
workspace = true
