[package]
name    = "dynatos-html"
version = "0.1.0"
edition = "2024"

[dependencies]

dynatos-html-macros = { workspace = true }
dynatos-util        = { workspace = true }

anyhow = { workspace = true }
duplicate = { workspace = true }
extend = { workspace = true }
itertools = { workspace = true }
js-sys = { workspace = true }
tracing = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { features = [
	"ClipboardEvent",
	"Comment",
	"CssStyleDeclaration",
	"Document",
	"DragEvent",
	"Element",
	"FocusEvent",
	"HtmlCanvasElement",
	"HtmlElement",
	"HtmlImageElement",
	"HtmlInputElement",
	"HtmlTextAreaElement",
	"InputEvent",
	"PointerEvent",
	"PopStateEvent",
	"SubmitEvent",
	"Text",
	"WheelEvent",
	"Window",
], workspace = true }

[lints]
workspace = true
