[package]
name    = "dynatos-inheritance-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
convert_case = { workspace = true }
proc-macro2  = { workspace = true }
quote        = { workspace = true }
strum        = { features = ["derive"], workspace = true }
syn          = { workspace = true }

[lints]
workspace = true
