[package]
name    = "dynatos-inheritance"
version = "0.1.0"
edition = "2024"

[dependencies]

# Workspace
dynatos-inheritance-macros = { workspace = true }
dynatos-util               = { workspace = true }

duplicate = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }

[lints]
workspace = true
