[package]
name    = "dynatos-loadable"
version = "0.1.0"
edition = "2024"

[dependencies]

# Workspace
dynatos-reactive   = { workspace = true }
dynatos-sync-types = { workspace = true }

extend = { workspace = true }

[features]
sync = ["dynatos-reactive/sync", "dynatos-sync-types/sync"]

[lints]
workspace = true
