[package]
name    = "dynatos-loadable"
version = "0.1.0"
edition = "2024"

[dependencies]

# Workspace
dynatos-reactive   = { path = "../dynatos-reactive" }
dynatos-sync-types = { path = "../dynatos-sync-types" }

extend = { workspace = true }

[features]
sync = ["dynatos-reactive/sync", "dynatos-sync-types/sync"]

[lints]
workspace = true
