[package]
name    = "dynatos-loadable"
version = "0.1.0"
edition = "2024"

[dependencies]

# Workspace
dynatos-reactive   = { default-features = false, path = "../dynatos-reactive" }
dynatos-sync-types = { default-features = false, path = "../dynatos-sync-types" }

extend = { workspace = true }

[features]
default = ["wasm-js-promise"]

sync            = ["dynatos-reactive/sync", "dynatos-sync-types/sync"]
tokio           = ["dynatos-reactive/tokio"]
wasm-js-promise = ["dynatos-reactive/wasm-js-promise"]

[lints]
workspace = true
