[package]
name = "dynatos-reactive-async"
version = "0.1.0"
edition = "2021"

[dependencies]

dynatos-context = { workspace = true }
dynatos-reactive = { workspace = true }
dynatos-reactive-sync = { workspace = true }
dynatos-util = { workspace = true }

duplicate = { workspace = true }
extend = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
pin-project = { workspace = true }
scopeguard = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[dev-dependencies]
zutil-cloned = { workspace = true }

[lints]
workspace = true

[features]
sync = ["dynatos-reactive/sync", "dynatos-reactive-sync/sync"]
