[package]
name    = "dynatos-reactive"
version = "0.1.0"
edition = "2024"

[dependencies]

# Workspace
dynatos-sync-types = { path = "../dynatos-sync-types" }
dynatos-util       = { path = "../dynatos-util" }

derive_more          = { features = ["full"], workspace = true }
duplicate            = { workspace = true }
extend               = { workspace = true }
futures              = { workspace = true }
itertools            = { workspace = true }
petgraph             = { workspace = true }
tracing              = { workspace = true }
wasm-bindgen-futures = { workspace = true }
zutil-cloned         = { workspace = true }

[features]
sync = ["dynatos-sync-types/sync"]

[lints]
workspace = true
