[package]
name    = "dynatos-reactive"
version = "0.1.0"
edition = "2024"

[dependencies]

# Workspace
dynatos-sync-types = { default-features = false, path = "../dynatos-sync-types" }
dynatos-util       = { default-features = false, path = "../dynatos-util" }

derive_more          = { features = ["full"], workspace = true }
duplicate            = { workspace = true }
extend               = { workspace = true }
futures              = { workspace = true }
itertools            = { workspace = true }
petgraph             = { workspace = true }
tokio                = { features = ["rt"], optional = true, workspace = true }
tracing              = { workspace = true }
wasm-bindgen-futures = { optional = true, workspace = true }
zutil-cloned         = { workspace = true }

[features]
default = ["wasm-js-promise"]

sync            = ["dynatos-sync-types/sync"]
tokio           = ["dep:tokio", "sync"]
wasm-js-promise = ["dep:wasm-bindgen-futures"]

[lints]
workspace = true
