[package]
name = "dynatos-title"
version = "0.1.0"
edition = "2021"

[dependencies]

dynatos-reactive = { workspace = true }
dynatos-util = { workspace = true }

anyhow = { workspace = true }
duplicate = { workspace = true }
extend = { workspace = true }
js-sys = { workspace = true }
tracing = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }

[lints]
workspace = true
