[package]
name = "dynatos-util"
version = "0.1.0"
edition = "2021"

[dependencies]

dynatos-util-macros = { workspace = true }

anyhow = { workspace = true }
duplicate = { workspace = true }
extend = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = [
	"Document",
	"Element",
	"HtmlElement",
	"PointerEvent",
	"InputEvent",
	"PopStateEvent",
	"Window",
] }

[lints]
workspace = true
