[package]
name    = "dynatos-web-dep-web-sys"
version = "0.1.0"
edition = "2024"

[dependencies]

dynatos-util    = { default-features = false, path = "../dynatos-util" }
dynatos-web-ssr = { default-features = false, optional = true, path = "../dynatos-web-ssr" }

web-sys = { features = [
	"AnimationEvent",
	"ClipboardEvent",
	"Comment",
	"CssStyleDeclaration",
	"Document",
	"DragEvent",
	"Element",
	"Event",
	"EventTarget",
	"FocusEvent",
	"History",
	"HtmlBodyElement",
	"HtmlCanvasElement",
	"HtmlDetailsElement",
	"HtmlDialogElement",
	"HtmlElement",
	"HtmlHeadElement",
	"HtmlImageElement",
	"HtmlInputElement",
	"HtmlTextAreaElement",
	"InputEvent",
	"Location",
	"MouseEvent",
	"Node",
	"PointerEvent",
	"PopStateEvent",
	"SubmitEvent",
	"Text",
	"ToggleEvent",
	"TransitionEvent",
	"WheelEvent",
	"Window",
	"console",
], optional = true, workspace = true }

[features]
default = ["csr"]

csr = ["web-sys"]
ssr = ["dynatos-web-ssr"]

[lints]
workspace = true
