[package]
name    = "dynatos-web-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]

# Workspace
dynatos-web-parser = { default-features = false, path = "../dynatos-web-parser" }

proc-macro2 = { workspace = true }
quote       = { workspace = true }
strum       = { features = ["derive"], workspace = true }
syn         = { features = ["extra-traits", "full"], workspace = true }

[lints]
workspace = true
