[package]
name    = "dynatos-web-reactive"
version = "0.1.0"
edition = "2024"

[dependencies]

# Workspace
dynatos-inheritance         = { default-features = false, optional = true, path = "../dynatos-inheritance" }
dynatos-reactive            = { default-features = false, path = "../dynatos-reactive" }
dynatos-sync-types          = { default-features = false, path = "../dynatos-sync-types" }
dynatos-util                = { default-features = false, path = "../dynatos-util" }
dynatos-web                 = { default-features = false, path = "../dynatos-web" }
dynatos-web-reactive-macros = { default-features = false, path = "../dynatos-web-reactive-macros" }
dynatos-web-router          = { default-features = false, path = "../dynatos-web-router" }
dynatos-web-ssr             = { default-features = false, features = ["reactive"], optional = true, path = "../dynatos-web-ssr" }

duplicate    = { workspace = true }
extend       = { workspace = true }
js-sys       = { optional = true, workspace = true }
wasm-bindgen = { optional = true, workspace = true }

[features]
default = ["csr", "wasm-js-promise"]

csr             = ["dep:js-sys", "dep:wasm-bindgen", "dynatos-web-router/csr", "dynatos-web/csr"]
ssr             = ["dep:dynatos-inheritance", "dep:dynatos-web-ssr", "dynatos-web-router/ssr", "dynatos-web/ssr", "sync"]
sync            = ["dynatos-reactive/sync", "dynatos-sync-types/sync", "dynatos-web-router/sync", "dynatos-web/sync"]
tokio           = ["dynatos-reactive/tokio"]
wasm-js-promise = ["dynatos-reactive/wasm-js-promise"]

[lints]
workspace = true
