[package]
name    = "dynatos-web-router"
version = "0.1.0"
edition = "2024"

[dependencies]

# Workspace
dynatos-loadable   = { path = "../dynatos-loadable" }
dynatos-reactive   = { path = "../dynatos-reactive" }
dynatos-sync-types = { path = "../dynatos-sync-types" }
dynatos-web        = { path = "../dynatos-web" }

thiserror    = { workspace = true }
tracing      = { workspace = true }
url          = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys      = { workspace = true }
zutil-cloned = { workspace = true }

[features]
sync = ["dynatos-loadable/sync", "dynatos-reactive/sync", "dynatos-sync-types/sync", "dynatos-web/sync"]

[lints]
workspace = true
