[package]
name    = "dynatos-web-title"
version = "0.1.0"
edition = "2024"

[dependencies]

# Workspace
dynatos-sync-types = { path = "../dynatos-sync-types" }
dynatos-util       = { path = "../dynatos-util" }
dynatos-web        = { path = "../dynatos-web" }

extend       = { workspace = true }
js-sys       = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys      = { workspace = true }


[features]
sync = ["dynatos-sync-types/sync"]

[lints]
workspace = true
