[package]
name    = "dynatos-web-title"
version = "0.1.0"
edition = "2024"

[dependencies]

# Workspace
dynatos-sync-types = { default-features = false, path = "../dynatos-sync-types" }
dynatos-util       = { default-features = false, path = "../dynatos-util" }
dynatos-web        = { default-features = false, path = "../dynatos-web" }

extend       = { workspace = true }
wasm-bindgen = { optional = true, workspace = true }

[features]
default = ["csr"]

csr  = ["dep:wasm-bindgen", "dynatos-web/csr"]
ssr  = ["dynatos-web/ssr", "sync"]
sync = ["dynatos-sync-types/sync", "dynatos-web/sync"]

[lints]
workspace = true
