[package]
name    = "dynatos-web-title"
version = "0.1.0"
edition = "2024"

[dependencies]

# Workspace
dynatos-sync-types = { default-features = false, path = "../dynatos-sync-types" }
dynatos-util       = { default-features = false, path = "../dynatos-util" }
dynatos-web        = { default-features = false, path = "../dynatos-web" }
js-sys             = { default-features = false, package = "dynatos-web-dep-js-sys", path = "../dynatos-web-dep-js-sys" }
wasm-bindgen       = { default-features = false, package = "dynatos-web-dep-wasm-bindgen", path = "../dynatos-web-dep-wasm-bindgen" }
web-sys            = { default-features = false, package = "dynatos-web-dep-web-sys", path = "../dynatos-web-dep-web-sys" }

extend = { workspace = true }

[features]
default = ["csr"]

csr  = ["dynatos-web/csr", "js-sys/csr", "wasm-bindgen/csr", "web-sys/csr"]
ssr  = ["dynatos-web/ssr", "js-sys/ssr", "sync", "wasm-bindgen/ssr", "web-sys/ssr"]
sync = ["dynatos-sync-types/sync", "dynatos-web/sync"]

[lints]
workspace = true
